--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,4 @@ spring.jpa.hibernate.ddl-auto= none
 spring.jpa.show-sql= false
 
 #resources
-spring.mvc.static-path-pattern=/**
+spring.mvc.static-path-pattern=/resources/**
