Added i18n configuration and translations, added paging for books list, added comments.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #InternalResourceViewResolver
-spring.mvc.view.prefix= /view/
-spring.mvc.view.suffix= .jsp
+spring.mvc.view.prefix=/view/
+spring.mvc.view.suffix=.jsp
 
 ##hsqldb
 database=hsqldb
@@ -8,8 +8,15 @@ spring.datasource.schema=classpath*:db/${database}/schema.sql
 spring.datasource.data=classpath*:db/${database}/data.sql
 
 #hibernate
-spring.jpa.hibernate.ddl-auto= none
-spring.jpa.show-sql= false
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=false
 
 #resources
 spring.mvc.static-path-pattern=/resources/**
+
+#messages i18n
+spring.messages.basename=messages/messages
+spring.messages.encoding=UTF-8
+
+#spring tools
+spring.devtools.livereload.enabled=true
