--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	<packaging>jar</packaging>
 
 	<name>webstore</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Project of a bookstore using Spring Boot</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -42,10 +42,13 @@
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-taglibs</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
 		</dependency>
 
 		<dependency>
