Implemented EmailService providing the possibility to send emails to users, i.e. registration or order confirmation.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,11 @@ spring.messages.encoding=UTF-8
 
 #spring tools
 spring.devtools.livereload.enabled=true
+
+#spring mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=<provide-service-email-addres>
+spring.mail.password=<provide-service-email-password>
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
